Make config test more complex

--- a/tests/test-config.yaml
+++ b/tests/test-config.yaml
@@ -1,5 +1,8 @@
-base: blah
-input: poo
+base: ~/aaa/bbb/
+input: ccc/
 output:
+  json:
+    path: ddd/
   tex: 
-    path: output
+    path: eee/
+    compile: "xelatex"
