--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/mocha": "^5.2.6"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register tests/**/*.ts"
+    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/src/chordown.js"
   },
   "author": "Hannes Smit",
   "license": "ISC"
