--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/js-yaml": "^3.12.1",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^12.0.2",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "ts-node": "^8.2.0",
-    "typescript": "^3.4.5",
-    "@types/js-yaml": "^3.12.1",
-    "@types/node": "^12.0.2",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6"
+    "tslint": "^5.17.0",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "test": "mocha -r ts-node/register tests/**/*.ts",
+    "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/src/chordown.js"
   },
