--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "paths": { "*": ["types/*"] },
     "module": "commonjs",
     "target": "es2018",
-    "outDir": "dist"
+    "outDir": "dist",
+    "sourceMap": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules"]
