Fix licence in package.json

--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
     "start": "node dist/src/chordown.js"
   },
   "author": "Hannes Smit",
-  "license": "ISC"
+  "license": "GPL-3.0-or-later",
 }
