--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   },
   "author": "Hannes Smit",
   "license": "GPL-3.0-or-later",
-  "private": true
+  "private": true,
+  "bin": {
+    "chordown": "./dist/src/chordown.js"
+  }
 }
