Add watch npm command

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint": "tslint --config tslint.json --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "fix": "tslint --fix --config tslint.json --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "build": "tsc -p tsconfig.json",
+    "watch":"tsc -p tsconfig.json --watch",
     "start": "node dist/src/chordown.js"
   },
   "author": "Hannes Smit",
