--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.2",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "ts-node": "^8.2.0",
