--- a/package.json
+++ b/package.json
@@ -12,23 +12,29 @@
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/js-yaml": "^3.12.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^12.0.2",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/chai": "^4.2.9",
+    "@types/js-yaml": "^3.12.2",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.28",
     "chai": "^4.2.0",
-    "mocha": "^6.1.4",
+    "codecov": "^3.6.5",
+    "cross-env": "^7.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^6.2.2",
     "nyc": "^14.1.1",
-    "ts-node": "^8.2.0",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.6.2",
     "tslint": "^5.17.0",
     "typescript": "^3.4.5"
   },
   "scripts": {
     "test": "mocha -r ts-node/register tests/**/*.ts",
+    "coverage": "nyc npm run test",
     "lint": "tslint --config tslint.json --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "fix": "tslint --fix --config tslint.json --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "build": "tsc -p tsconfig.json",
-    "watch":"tsc -p tsconfig.json --watch",
+    "watch": "tsc -p tsconfig.json --watch",
     "start": "node dist/src/chordown.js"
   },
   "author": "Hannes Smit",
