--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "ts-node": "^8.2.0",
