--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "typescript": "^3.4.5"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register tests/**/*.ts",
-    "lint": "eslint src/**/*.ts src/*.ts tests/**/*.ts tests/*.ts",
+    "test": "mocha -r ts-node/register test/**/*.ts",
+    "lint": "eslint src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json --watch",
     "start": "node dist/src/chordown.js"
