Add coverage task

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.ts",
+    "coverage": "nyc npm run test",
     "lint": "eslint src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json --watch",
