--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "fs-extra": "^8.0.1",
-    "js-yaml": "^3.13.1",
-    "shelljs": "^0.8.3"
+    "glob": "^7.1.6",
+    "shelljs": "^0.8.3",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
