Fix tsconfig test path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "outDir": "dist/",
     "sourceMap": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules"]
 }
