--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prefer-arrow": "^1.1.7",
     "codecov": "^3.6.5",
     "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
+    "prettier": "^1.19.1",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
     "typescript": "^3.4.5"
@@ -36,6 +39,7 @@
     "test": "mocha -r ts-node/register test/**/*.ts",
     "coverage": "nyc npm run test",
     "lint": "eslint src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
+    "fix": "eslint --fix src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json --watch",
     "start": "node dist/src/chordown.js"
