--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -14,17 +15,13 @@
   },
   "env": { "mocha": true },
   "rules": {
-    "prefer-arrow/prefer-arrow-functions": [
-      "warn",
-      {
-        "singleReturnOnly": true
-      }
-    ],
+    "prefer-arrow/prefer-arrow-functions": "warn",
     "camelcase": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/interface-name-prefix": [
       "warn",
       { "prefixWithI": "always" }
-    ]
+    ],
+    "prettier/prettier": "error"
   }
 }
