--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 
-before_install:
-  - npm install -g typescript
+install:
+  - npm install
+
+cache:
+  directories:
+    - node_modules
