Update codecov script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.ts",
-    "coverage": "nyc npm run test",
+    "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
     "lint": "eslint src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
     "fix": "eslint --fix src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
     "build": "tsc -p tsconfig.json",
