--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ script:
   - npm run test
 
 after_success:
-  - npm run coverage
+  - npm run test-coverage
+  - npm run codecov
 
 cache:
   directories:
