--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.ts",
-    "test-coverage": "nyc npm run test",
-    "codecov": "nyc report --reporter=json > .coverage.json && codecov --file .coverage.json",
+    "coverage": "nyc --reporter=lcov npm run test && codecov",
     "lint": "eslint --ext .ts src/ test/",
     "fix": "eslint --fix --ext .ts src/ test/",
     "build": "tsc -p tsconfig.json",
