Change compile target to ES5 for compatability

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": { "*": ["types/*"] },
     "module": "commonjs",
-    "target": "es2018",
+    "target": "ES5",
     "outDir": "dist/",
     "sourceMap": true
   },
