--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
-language: node_js
+language: "node_js"
 
-node_js:  
+node_js:
   - "node"
 
-before_install:
-  - npm install -g typescript
+install:
+  - npm install
+
+script:
+  - npm run test
+
+after_success:
+  - npm run coverage
+
+cache:
+  directories:
+    - node_modules
