Fix eslint scripts

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.ts",
     "coverage": "nyc npm run test",
-    "lint": "eslint src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
-    "fix": "eslint --fix src/**/*.ts src/*.ts test/**/*.ts test/*.ts",
+    "lint": "eslint --ext .ts src/ test/",
+    "fix": "eslint --fix --ext .ts src/ test/",
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json --watch",
     "start": "node dist/src/chordown.js"
