--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^3.1",
     "istanbul": "^0.4",
     "mocha": "^7.1",
+    "mock-fs": "^4.12.0",
     "nyc": "^15.0.0",
     "prettier": "^1.19",
     "source-map-support": "^0.5",
